[tool.poetry]
name = "omagnet"
version = "0.1.0"
description = ""
authors = ["Romario Stani <staniromario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
netmiko = "^4.4.0"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pylint = "^3.2.6"
black = "^24.8.0"
pytest = "^7.0"
httpx = "^0.27.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
